<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_huge">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bottomSheet_title_upload"
        android:textAppearance="@style/TextAppearance_BottomSheet_Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <GridLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.example.common.view.ImageTitleView
            android:id="@+id/camera"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="top|center"
            app:title="@string/camera"
            app:icon="@drawable/ic_baseline_photo_camera_24"/>

        <com.example.common.view.ImageTitleView
            android:id="@+id/gallery"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="top|center"
            app:icon="@drawable/ic_baseline_collections_24"
            app:title="@string/gallery" />

        <com.example.common.view.ImageTitleView
            android:id="@+id/file"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="top|center"
            app:icon="@drawable/ic_baseline_folder_24"
            app:title="@string/file" />

        <com.example.common.view.ImageTitleView
            android:id="@+id/drive"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            app:icon="@drawable/ic_baseline_cloud_download_24"
            android:layout_marginTop="@dimen/margin_medium"
            app:title="@string/drive" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>